# Open-Qwen2VL

./: .gitignore  README.md  xx.py
data_filtering/: requirements.txt
data_filtering/baselines/: additional_text_filter.py  apply_filter.py  utils.py
data_prepare/: split_mammoth_10m.py
docs/: DATA_Filter.md  Eval.md
mm_sequence_packing/: multiprocess_sequence_packing_image_to_json.sh  multiprocess_sequence_packing_image_to_pil.sh  sequence_packing_image_to_json.py  sequence_packing_image_to_pil.py
prismatic-vlms/: fine_tune.sh  fine_tune_mammoth.sh  pyproject.toml  train.sh
prismatic-vlms/prismatic/conf/: datasets.py  models.py
prismatic-vlms/prismatic/models/: load.py  materialize.py  registry.py
prismatic-vlms/prismatic/models/backbones/llm/: __init__.py  base_llm.py  llama2.py  llama3.py  mistral.py  phi3.py  qwen2.py
prismatic-vlms/prismatic/models/backbones/llm/prompting/: __init__.py  base_prompter.py  llama2_chat_prompter.py  llama3_chat_prompter.py  phi_3_prompter.py  qwen2_prompter.py  vicuna_v15_prompter.py
prismatic-vlms/prismatic/models/backbones/vision/: base_vision.py  dinoclip_vit.py  dinosiglip_vit.py
prismatic-vlms/prismatic/models/vlms/: prismatic.py
prismatic-vlms/prismatic/overwatch/: overwatch.py
prismatic-vlms/prismatic/preprocessing/: __init__.py  materialize.py
prismatic-vlms/prismatic/preprocessing/datasets/: __init__.py  datasets.py
prismatic-vlms/prismatic/training/: metrics.py
prismatic-vlms/prismatic/training/strategies/: base_strategy.py  fsdp.py
prismatic-vlms/prismatic/util/: data_utils.py  nn_utils.py
prismatic-vlms/scripts/: pretrain.py
vlm-evaluation/: .gitignore  eval_sft.sh  pyproject.toml
vlm-evaluation/scripts/: coco_score.py  evaluate.py
vlm-evaluation/scripts/datasets/: prepare.py
vlm-evaluation/vlm_eval/conf/: datasets.py
vlm-evaluation/vlm_eval/models/: prismatic.py  qwen2vl.py
vlm-evaluation/vlm_eval/tasks/: builders.py  registry.py
vlm-evaluation/vlm_eval/tasks/harnesses/: __init__.py  ai2d.py  gqa.py  mantis.py  mathvista.py  mmbench.py  mmlu.py  mmmu.py  mmstar.py  mscoco_karpathy.py  okvqa.py  pope.py  seedbench.py  tallyqa.py  textvqa.py  vizwiz.py  vqav2.py
vlm-evaluation/vlm_eval/util/: interfaces.py
vlm-evaluation/vlm_eval/util/evaluation/mmmu/: eval.py
